work in progress

--- a/courser/coursera_deep_learning_keras/my_lab.ipynb
+++ b/courser/coursera_deep_learning_keras/my_lab.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "ce5c2b66-cdbf-4aa6-b79f-06a03a7bcbc0",
    "metadata": {},
    "outputs": [],
@@ -266,10 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "8661506d-5041-4d1e-bfeb-b6021cd64762",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\saurabhd\\MyTrials\\Python\\PythonExperiements\\.venv\\lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "model_2 = Sequential()\n",
     "model_2.add(Dense(6, input_shape=(8,), activation=\"relu\"))\n",
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "e28e26d9-2123-4523-acc4-5e84d243caf7",
    "metadata": {},
    "outputs": [
@@ -299,9 +308,9 @@
      "evalue": "name 'X_train_norm' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m--------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m run_hist_2 \u001b[38;5;241m=\u001b[39m model_2\u001b[38;5;241m.\u001b[39mfit(\u001b[43mX_train_norm\u001b[49m, y_train, validation_data\u001b[38;5;241m=\u001b[39m(X_test_norm, y_test), epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1500\u001b[39m)\n",
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m run_hist_2 \u001b[38;5;241m=\u001b[39m model_2\u001b[38;5;241m.\u001b[39mfit(\u001b[43mX_train_norm\u001b[49m, y_train, validation_data\u001b[38;5;241m=\u001b[39m(X_test_norm, y_test), epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1500\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'X_train_norm' is not defined"
      ]
     }
