--- a/performance/dataframe_io/dataframe_io_performance.ipynb
+++ b/performance/dataframe_io/dataframe_io_performance.ipynb
@@ -19,21 +19,174 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56035e0d",
+   "metadata": {},
+   "source": [
+    "# imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5810999d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d939a87b",
+   "metadata": {},
+   "source": [
+    "# Create dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "41dad146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def pick_randomly_from_list(input: list[int] ,m_times: int)->list[int]:\n",
+    "    n_integers = input\n",
+    "    random_picks = [random.choice(n_integers) for _ in range(m_times)]\n",
+    "    return random_picks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6699bc18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Picks: [5, 6, 8, 4, 10, 7, 9, 3, 5, 7, 1, 4, 4, 7, 3, 6, 2, 1, 2, 1, 7, 1, 2, 10, 10, 4, 10, 4, 6, 5, 6, 4, 6, 8, 9, 4, 7, 10, 9, 10, 5, 2, 10, 10, 10, 3, 8, 7, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Given list of N integers\n",
+    "n_integers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Number of times to pick randomly\n",
+    "m_times = 50\n",
+    "results=pick_randomly_from_list(input=n_integers, m_times=m_times)\n",
+    "print(\"Random Picks:\", results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "95002962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataframe(max_rows: int, unique_row_count: int)->pd.DataFrame:\n",
+    "    starting_number=10000\n",
+    "    gap_between_record_minutes=3\n",
+    "    unique_list = list(range(starting_number, starting_number + unique_row_count))\n",
+    "    random_picks = pick_randomly_from_list(input=unique_list, m_times=max_rows)\n",
+    "    random_strings = [f\"This is string number: {num}\" for num in random_picks]\n",
+    "    create_dates: list[dt.datetime] = []\n",
+    "    now = dt.datetime.now()\n",
+    "    for idx in range(max_rows):\n",
+    "        few_minutes_ago = now - dt.timedelta(minutes=idx*gap_between_record_minutes)\n",
+    "        create_dates.append(few_minutes_ago)\n",
+    "\n",
+    "    df = pd.DataFrame({\n",
+    "        'id': random_picks,\n",
+    "        'description': random_strings,\n",
+    "        'created_at': create_dates\n",
+    "    })\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8be198d",
+   "metadata": {},
+   "source": [
+    "# Demo with 20 records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e2606573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       id                   description                 created_at\n",
+      "0   10009  This is string number: 10009 2025-11-11 22:00:54.801009\n",
+      "1   10007  This is string number: 10007 2025-11-11 21:57:54.801009\n",
+      "2   10003  This is string number: 10003 2025-11-11 21:54:54.801009\n",
+      "3   10000  This is string number: 10000 2025-11-11 21:51:54.801009\n",
+      "4   10001  This is string number: 10001 2025-11-11 21:48:54.801009\n",
+      "5   10002  This is string number: 10002 2025-11-11 21:45:54.801009\n",
+      "6   10002  This is string number: 10002 2025-11-11 21:42:54.801009\n",
+      "7   10008  This is string number: 10008 2025-11-11 21:39:54.801009\n",
+      "8   10002  This is string number: 10002 2025-11-11 21:36:54.801009\n",
+      "9   10006  This is string number: 10006 2025-11-11 21:33:54.801009\n",
+      "10  10008  This is string number: 10008 2025-11-11 21:30:54.801009\n",
+      "11  10000  This is string number: 10000 2025-11-11 21:27:54.801009\n",
+      "12  10001  This is string number: 10001 2025-11-11 21:24:54.801009\n",
+      "13  10006  This is string number: 10006 2025-11-11 21:21:54.801009\n",
+      "14  10001  This is string number: 10001 2025-11-11 21:18:54.801009\n",
+      "15  10008  This is string number: 10008 2025-11-11 21:15:54.801009\n",
+      "16  10003  This is string number: 10003 2025-11-11 21:12:54.801009\n",
+      "17  10008  This is string number: 10008 2025-11-11 21:09:54.801009\n",
+      "18  10006  This is string number: 10006 2025-11-11 21:06:54.801009\n",
+      "19  10007  This is string number: 10007 2025-11-11 21:03:54.801009\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sample_20 = create_dataframe(max_rows=20, unique_row_count=10)\n",
+    "print(df_sample_20)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d939a87b",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "b94d7bef",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
