--- a/performance/dataframe_io/dataframe_io_performance.ipynb
+++ b/performance/dataframe_io/dataframe_io_performance.ipynb
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56035e0d",
+   "id": "d939a87b",
    "metadata": {},
    "source": [
-    "# imports"
+    "# # Create dataframe"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5810999d",
+   "id": "952c8fcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d939a87b",
+   "id": "5ff9fc30",
    "metadata": {},
    "source": [
-    "# Create dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "41dad146",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# Given list of N integers\n",
+    "n_integers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
     "\n",
     "\n",
     "def pick_randomly_from_list(input: list[int] ,m_times: int)->list[int]:\n",
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "6699bc18",
    "metadata": {},
    "outputs": [
@@ -89,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "95002962",
+   "execution_count": null,
+   "id": "e90b1359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,56 +109,355 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "13b8a8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "d8be198d",
+   "id": "b94d7bef",
    "metadata": {},
    "source": [
-    "# Demo with 20 records"
+    "# Demo with 100,000 records"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "e2606573",
+   "execution_count": null,
+   "id": "b5583818",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       id                   description                 created_at\n",
-      "0   10009  This is string number: 10009 2025-11-11 22:00:54.801009\n",
-      "1   10007  This is string number: 10007 2025-11-11 21:57:54.801009\n",
-      "2   10003  This is string number: 10003 2025-11-11 21:54:54.801009\n",
-      "3   10000  This is string number: 10000 2025-11-11 21:51:54.801009\n",
-      "4   10001  This is string number: 10001 2025-11-11 21:48:54.801009\n",
-      "5   10002  This is string number: 10002 2025-11-11 21:45:54.801009\n",
-      "6   10002  This is string number: 10002 2025-11-11 21:42:54.801009\n",
-      "7   10008  This is string number: 10008 2025-11-11 21:39:54.801009\n",
-      "8   10002  This is string number: 10002 2025-11-11 21:36:54.801009\n",
-      "9   10006  This is string number: 10006 2025-11-11 21:33:54.801009\n",
-      "10  10008  This is string number: 10008 2025-11-11 21:30:54.801009\n",
-      "11  10000  This is string number: 10000 2025-11-11 21:27:54.801009\n",
-      "12  10001  This is string number: 10001 2025-11-11 21:24:54.801009\n",
-      "13  10006  This is string number: 10006 2025-11-11 21:21:54.801009\n",
-      "14  10001  This is string number: 10001 2025-11-11 21:18:54.801009\n",
-      "15  10008  This is string number: 10008 2025-11-11 21:15:54.801009\n",
-      "16  10003  This is string number: 10003 2025-11-11 21:12:54.801009\n",
-      "17  10008  This is string number: 10008 2025-11-11 21:09:54.801009\n",
-      "18  10006  This is string number: 10006 2025-11-11 21:06:54.801009\n",
-      "19  10007  This is string number: 10007 2025-11-11 21:03:54.801009\n"
+      "          id                   description                 created_at\n",
+      "0      10117  This is string number: 10117 2025-11-11 22:05:04.178859\n",
+      "1      10154  This is string number: 10154 2025-11-11 22:02:04.178859\n",
+      "2      10424  This is string number: 10424 2025-11-11 21:59:04.178859\n",
+      "3      10325  This is string number: 10325 2025-11-11 21:56:04.178859\n",
+      "4      10590  This is string number: 10590 2025-11-11 21:53:04.178859\n",
+      "...      ...                           ...                        ...\n",
+      "99995  10101  This is string number: 10101 2025-04-17 14:20:04.178859\n",
+      "99996  10217  This is string number: 10217 2025-04-17 14:17:04.178859\n",
+      "99997  10765  This is string number: 10765 2025-04-17 14:14:04.178859\n",
+      "99998  10496  This is string number: 10496 2025-04-17 14:11:04.178859\n",
+      "99999  10584  This is string number: 10584 2025-04-17 14:08:04.178859\n",
+      "\n",
+      "[100000 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "df_sample_20 = create_dataframe(max_rows=20, unique_row_count=10)\n",
-    "print(df_sample_20)"
+    "# Save the dataframe to a binary format\n",
+    "binary_file_path = 'sample_dataframe.pkl'\n",
+    "df.to_pickle(binary_file_path)\n",
+    "\n",
+    "print(f\"Dataframe saved to {binary_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b50b00c5",
+   "metadata": {},
+   "source": [
+    "# Save 100,000 to disk"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94d7bef",
+   "id": "e7217179",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe saved to sample_dataframe.pkl in 0.0630 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Save the dataframe to a pickle file and measure the time taken\n",
+    "binary_file_path = 'sample_dataframe.pkl'\n",
+    "start_time = time.time()\n",
+    "df_sample_100_000.to_pickle(binary_file_path)\n",
+    "end_time = time.time()\n",
+    "\n",
+    "time_taken = end_time - start_time\n",
+    "print(f\"Dataframe saved to {binary_file_path} in {time_taken:.4f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba02ca7c",
+   "metadata": {},
+   "source": [
+    "# 1000,000 records\n",
+    "## Create the frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b370a49b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe created in 6.3269 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "df_1000_000=create_dataframe(max_rows=1000000, unique_row_count=10000)\n",
+    "end_time = time.time()\n",
+    "time_taken = end_time - start_time\n",
+    "print(f\"Dataframe created in {time_taken:.4f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68865d45",
+   "metadata": {},
+   "source": [
+    "## Save to disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cd07a67f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe saved to sample_dataframe.pkl in 0.5639 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "binary_file_path = 'sample_dataframe.pkl'\n",
+    "\n",
+    "start_time = time.time()\n",
+    "df_1000_000.to_pickle(binary_file_path)\n",
+    "end_time = time.time()\n",
+    "\n",
+    "time_taken = end_time - start_time\n",
+    "print(f\"Dataframe saved to {binary_file_path} in {time_taken:.4f} seconds\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a19e8d2",
+   "metadata": {},
+   "source": [
+    "## Load from disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "580148c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe loaded from sample_dataframe.pkl in 0.2834 seconds\n",
+      "Loaded Dataframe shape: (1000000, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "binary_file_path = 'sample_dataframe.pkl'\n",
+    "start_time = time.time()\n",
+    "df_loaded = pd.read_pickle(binary_file_path)\n",
+    "end_time = time.time()\n",
+    "time_taken = end_time - start_time\n",
+    "print(f\"Dataframe loaded from {binary_file_path} in {time_taken:.4f} seconds\")\n",
+    "print(f\"Loaded Dataframe shape: {df_loaded.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9cf34760",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>description</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14955</td>\n",
+       "      <td>This is string number: 14955</td>\n",
+       "      <td>2025-11-11 22:21:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16291</td>\n",
+       "      <td>This is string number: 16291</td>\n",
+       "      <td>2025-11-11 22:18:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16247</td>\n",
+       "      <td>This is string number: 16247</td>\n",
+       "      <td>2025-11-11 22:15:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19501</td>\n",
+       "      <td>This is string number: 19501</td>\n",
+       "      <td>2025-11-11 22:12:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12050</td>\n",
+       "      <td>This is string number: 12050</td>\n",
+       "      <td>2025-11-11 22:09:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999995</th>\n",
+       "      <td>16014</td>\n",
+       "      <td>This is string number: 16014</td>\n",
+       "      <td>2020-02-28 14:36:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999996</th>\n",
+       "      <td>16498</td>\n",
+       "      <td>This is string number: 16498</td>\n",
+       "      <td>2020-02-28 14:33:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999997</th>\n",
+       "      <td>19564</td>\n",
+       "      <td>This is string number: 19564</td>\n",
+       "      <td>2020-02-28 14:30:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999998</th>\n",
+       "      <td>18631</td>\n",
+       "      <td>This is string number: 18631</td>\n",
+       "      <td>2020-02-28 14:27:57.488869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999999</th>\n",
+       "      <td>14341</td>\n",
+       "      <td>This is string number: 14341</td>\n",
+       "      <td>2020-02-28 14:24:57.488869</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                   description                 created_at\n",
+       "0       14955  This is string number: 14955 2025-11-11 22:21:57.488869\n",
+       "1       16291  This is string number: 16291 2025-11-11 22:18:57.488869\n",
+       "2       16247  This is string number: 16247 2025-11-11 22:15:57.488869\n",
+       "3       19501  This is string number: 19501 2025-11-11 22:12:57.488869\n",
+       "4       12050  This is string number: 12050 2025-11-11 22:09:57.488869\n",
+       "...       ...                           ...                        ...\n",
+       "999995  16014  This is string number: 16014 2020-02-28 14:36:57.488869\n",
+       "999996  16498  This is string number: 16498 2020-02-28 14:33:57.488869\n",
+       "999997  19564  This is string number: 19564 2020-02-28 14:30:57.488869\n",
+       "999998  18631  This is string number: 18631 2020-02-28 14:27:57.488869\n",
+       "999999  14341  This is string number: 14341 2020-02-28 14:24:57.488869\n",
+       "\n",
+       "[1000000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_loaded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe8cd0d3",
+   "metadata": {},
+   "source": [
+    "## Search for the records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8bfba3f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique IDs in the dataframe: 10000\n",
+      "Filtering dataframe for id: 16712\n",
+      "Filtered Dataframe shape: (119, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_ids = df_loaded[\"id\"].unique().tolist()\n",
+    "print(f\"Unique IDs in the dataframe: {len(unique_ids)}\")\n",
+    "\n",
+    "random_id = random.choice(unique_ids)\n",
+    "print(f\"Filtering dataframe for id: {random_id}\")\n",
+    "filtered_df = df_loaded[df_loaded[\"id\"] == random_id]\n",
+    "print(f\"Filtered Dataframe shape: {filtered_df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "233b99af",
    "metadata": {},
    "outputs": [],
    "source": []
